# bilingual-reader

./: .gitignore  README.md  app.js  books.js  clear_agy_config.py  deploy.sh  fetch_quota_tmux.sh  generate_covers.py  get_auth_url.exp  get_quota.exp  get_quota_interactive.exp  index.html  install.sh  login_agy.exp  logout_agy.exp  parse_quota.py  process_the_lean_startup.sh  process_the_linux_command_line.sh  process_the_personal_mba.sh  reader.css  server.py  setup_debian.sh  sw.js  test_auth.py  test_expect_code.py  test_expect_stdin.py  test_login.exp  test_login.py  test_login2.py  test_login_width.exp  test_parse.py  update_ui.py
application/backend/: README.md  pyproject.toml  requirements.txt
application/backend/books_agent/: __init__.py  context.py  detect.py  doctor.py  phase_pack.py  phases.py  session.py
application/backend/books_cli/: __init__.py  agy_settings.py  fetch_quota_tmux.sh  main.py  quota_helper.py  server.py
application/backend/books_core/: __init__.py  assemble.py  asset_paths.py  book_layout.py  content_fidelity.py  figure_dimensions.py  ingest.py  io.py  library.py  library_cover.py  library_scaffold.py  library_upload.py  migrate.py  package.py  page_chrome.py  page_editor.py  paths.py  pdf_export.py  pdf_preview.py  rendered_layout.py  repair_report.py  repo.py  source_profile.py  validation.py  visual_diagnostics.py
application/backend/books_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
application/backend/scripts/: assemble_and_render_parts.py  batch_processor.py  check_overflow.py  (+17 more)
(+4354 files in other folders)
