[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "books-core"
version = "0.1.0"
description = "Python sidecar for Books HTML Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
books-cli = "books_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["books_core*", "books_cli*", "books_agent*"]
